--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nathen Biggs | Links</title>
+    <!-- Favicon -->
+    <link rel="icon" href="https://negabiggs.photo/avatar.png" type="image/x-icon" />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- Core theme CSS -->
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <!-- Parallax Pixel Background Animation -->
+    <section class="animated-background">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
+    <!-- End of Parallax Pixel Background Animation -->
+
+    <a id="profilePicture" href="#popup">
+      <img src="https://negabiggs.photo/avatar.png" alt="Profile Picture">
+    </a>
+
+    <div class="overlay" id="popup">
+      <div class="popup">
+        <div class="popup-photo">
+          <a href="https://negabiggs.photo/avatar.png" target="_blank">
+            <img src="https://negabiggs.photo/avatar.png" alt="Profile Picture">
+          </a>
+        </div>
+        <div class="popup-quote">
+          What're you looking at!? Oh. It's me. ❤
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
+      </div>
+    </div>
+
+    <div id="userName">
+      @negabiggs - Nathen Biggs
+    </div>
+
+    <div id="links">
+      <a class="link" href="https://www.instagram.com/negabiggs" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      </a>
+      <a class="link" href="https://twitter.com/negabiggs" target="_blank">
+        <i class="fab fa-twitter">&nbsp;</i>Twitter
+      </a>
+      <a class="link" href="https://folio.negabiggs.photo" target="_blank">
+        <i class="fa fa-camera">&nbsp;</i>Portfolio
+      </a>
+      <a class="link" href="https://twitch.tv/negabiggz" target="_blank">
+        <i class="fab fa-twitch">&nbsp;</i>Twitch
+      </a>
+    </div>
+
+    <div id="hashtag">
+      #BiggShot
+    </div>
+  </body>
+</html>
